--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,9 @@
 <div id="loginScreen">
+  <!-- <picture data-lazy="">
+    <img media="(min-width: 990px)" srcset='https://pixboost.com/api/2/img/getAway/mountain.jpg/optimise?auth=MjYxOTIxMjA3OA__'/>
+    <img media="(min-width: 640px)" srcset='https://pixboost.com/api/2/img/getAway/mountain.jpg/optimise?auth=MjYxOTIxMjA3OA__'/>
+    <img  srcset='https://pixboost.com/api/2/img/getAway/mountain.jpg/optimise?auth=MjYxOTIxMjA3OA__'/>
+</picture> -->
   <section id="loginBox" class="centered">
     <h2 class="loginText">Your <s>Destiny</s> Awaits! 
         <br> 
