--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,11 +1,15 @@
 <div class="notFound centered">
-    <h2>404 Page Not Found</h2>
+    <div class="errorText">
+        <h2>404 Page Not Found</h2>
     <h3>Much like you on vacation, this page cannot be found.</h3>
-    <div>
+    </div>
+    <div class="travelImage">
         <img src="../../assets/travel.gif" class="travelGif"/>
         <div class="credit">
             <small>Illustration by <a href="https://icons8.com/illustrations/author/A7iGlOUD5Neq">dekob2</a> from <a href="https://icons8.com/illustrations">Ouch!</a></small>
         </div>
         </div>
-    <button mat-raised-button class="styledButton home" (click)="backToHome()"><b>Back to Home</b></button>
+        <div class="homeButton">
+            <button mat-raised-button class="styledButton home" (click)="backToHome()"><b>Back to Home</b></button>
+        </div>
 </div>
