--- a/src/app/flight/flight.component.css
+++ b/src/app/flight/flight.component.css
@@ -5,7 +5,7 @@
   box-shadow: -1px 0px 10px 3px #888888;
 }
 .formImage{
-    background-image: url("../../assets/resort.jpg");
+    background-image: url("https://i.postimg.cc/PqNd9gHw/resort.jpg");
     background-position: center;
 }
 #flightDetail {
@@ -14,11 +14,25 @@
 }
 #flightDetails {
   display: grid;
-  grid-template-areas: "form image";
-  grid-template-columns: 50vw 1fr;
-  height: 100vh;
+  grid-template-rows: 30vh;
+  grid-template-areas:
+    "image"
+    "form"; 
   background-color: #d6d6d6;
 }
+
+@media (min-width: 600px) {
+  #flightDetails {
+    grid-template-rows: none;
+    grid-template-columns: 50vw 50vw;
+    grid-template-areas: "form image";
+  }
+  #imageContainer{
+    height: 100vh;
+  }
+
+}
+
 h2, .buttonRow{
     text-align: center;
     align-items: center;
