--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 #loginScreen{
     height: 100vh;
-    background-image: url('../../assets/mountain.jpg');
+    background-image: url('https://i.postimg.cc/4db2530b/mountain.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
